--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport"
-content="width=device-width,
-initial-scale=1.0">
 <title>Kids Learning App</title>
 
 <style>
@@ -111,9 +108,9 @@ body {
 /* ===== GAME GRID ===== */
 .menu {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-  gap: 16px;
-  padding: 16px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  padding: 25px;
 }
 
 /* Card */
@@ -131,9 +128,8 @@ body {
 }
 
 .card img {
-  width: 100%;
-  max-width: 120px;
-  height: auto;
+  width: 120px;
+  height:120px;
   object-fit: contain;
 }
 
@@ -343,3 +339,4 @@ function closeMenu() {
 </script>
 </body>
 </html>
+
