--- a/colours.html
+++ b/colours.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Colours Game</title>
 
 <style>.game-topbar {
@@ -228,4 +229,5 @@ loadQuestion();
   localStorage.setItem("isHomePage", "no");
 </script>
 </body>
+
 </html>
