--- a/animals.html
+++ b/animals.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animals Game</title>
     <style>
       /* ===== GAME TOP BAR ===== */
@@ -303,4 +305,5 @@ loadQuestion();
 
 
 </body>
+
 </html>
