--- a/calendar.html
+++ b/calendar.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calendar Game</title>
   <style>
     .game-topbar {
@@ -245,4 +247,5 @@ loadQuestion();
   localStorage.setItem("isHomePage", "no");
 </script>
 </body>
+
 </html>
