--- a/fruits.html
+++ b/fruits.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fruits Game</title>
 
   <style>
@@ -221,4 +222,5 @@ loadQuestion();
   localStorage.setItem("isHomePage", "no");
 </script>
 </body>
+
 </html>
