--- a/numbers.html
+++ b/numbers.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Numbers Game</title>
 
 <style>
@@ -239,4 +240,5 @@ loadQuestion();
     localStorage.setItem("isHomePage", "no");
   </script>
 </body>
+
 </html>
