--- a/vegetables.html
+++ b/vegetables.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Vegetables Game</title>
 
 <style>
@@ -197,4 +198,5 @@ loadQ();
   localStorage.setItem("isHomePage", "no");
 </script>
 </body>
+
 </html>
