--- a/profile.html
+++ b/profile.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Profile</title>
 
 <style>
@@ -333,4 +334,5 @@ body {
 </script>
 <script src="js/game.js"></script>
 </body>
+
 </html>
