--- a/social.html
+++ b/social.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Social Media</title>
 
 <style>
@@ -72,4 +73,5 @@ function openInstagram() {
 </script>
 
 </body>
+
 </html>
