--- a/feedback.html
+++ b/feedback.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Feedback</title>
 
 <style>
@@ -97,4 +98,5 @@ function sendFeedback() {
 </script>
 
 </body>
+
 </html>
