--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body {
 /*level*/
 .top-level{
   position: absolute;
-  left: 85px;
+  left: 45px;
   top: 50%;
   transform: translateY(-50%);
   font-size: 18px;
@@ -50,7 +50,7 @@ body {
 /* RIGHT (Coins) */
 .top-right {
   position: absolute;
-  right: 45px;
+  right: 15px;
   top: 50%;
   transform: translateY(-50%);
   display: flex;
@@ -58,8 +58,8 @@ body {
   gap: 8px;
 }
 .coin-icon{
-  width: 50px;
-  height: 80px;
+  width: 25px;
+  height: 40px;
   vertical-align: middle;
 }
 /* Hamburger */
@@ -222,7 +222,7 @@ a {
 
   <!-- CENTER TITLE -->
   <div class="top-center">
-    Kids Learning App 🎓
+    Kids Learning 🎓
   </div>
 
   <!-- RIGHT SIDE (Coins) -->
@@ -340,5 +340,6 @@ function closeMenu() {
 </script>
 </body>
 </html>
+
 
 
