--- a/profile.html
+++ b/profile.html
@@ -78,10 +78,12 @@ body {
 
     /* MAIN OVAL CARD */
     .profile-card {
-        width: 520px;
-        height: 160px;
+        width: 90%;
+       max-width: 400px;
+     
+        height: auto;
         background: #ffffff;
-        border-radius: 80px;
+        border-radius: 20px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -336,5 +338,6 @@ body {
 </body>
 
 </html>
+
 
 
