--- a/profile.html
+++ b/profile.html
@@ -77,9 +77,15 @@
   /* SMALLER AVATAR */
   .avatar-container {
     position: relative;
-    width: 80px;
-    height: 90px;
-  }
+    width: 80px;      /* Narrower width */
+    height: 100px;     /* Taller height creates the OVAL */
+    background: #cfe8e6;
+    border-radius: 50%; /* This makes the unequal sides look oval */
+    overflow: hidden;   /* Keeps the image inside the oval */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
 
   #avatarImage {
     width: 80px;
@@ -243,6 +249,7 @@
 </body>
 
 </html>
+
 
 
 
