--- a/profile.html
+++ b/profile.html
@@ -95,18 +95,16 @@
     object-fit: cover;
   }
 
-  #editAvatarBtn {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    border: none;
-    background: #ffc107;
-    border-radius: 50%;
-    padding: 4px;
-    font-size: 12px;
-    cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  }
+#editAvatarBtn {
+position: absolute;
+bottom: 5px;
+right: 5px;
+border: none;
+background: #ffc107;
+border-radius: 50%;
+padding: 6px;
+cursor: pointer;
+    }
 
   /* POPUP STYLES */
   .popup {
@@ -249,6 +247,7 @@
 </body>
 
 </html>
+
 
 
 
